parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> parts
Rule 2     parts -> parts part
Rule 3     parts -> part
Rule 4     part -> fundef
Rule 5     part -> instruction
Rule 6     part -> declaration
Rule 7     declaration -> TYPE inits ;
Rule 8     declaration -> error ;
Rule 9     inits -> inits , init
Rule 10    inits -> init
Rule 11    init -> ID = expression
Rule 12    instructions -> instructions instruction
Rule 13    instructions -> instruction
Rule 14    instruction -> print_instr
Rule 15    instruction -> labeled_instr
Rule 16    instruction -> assignment
Rule 17    instruction -> choice_instr
Rule 18    instruction -> while_instr
Rule 19    instruction -> repeat_instr
Rule 20    instruction -> return_instr
Rule 21    instruction -> break_instr
Rule 22    instruction -> continue_instr
Rule 23    instruction -> compound_instr
Rule 24    instruction -> expression ;
Rule 25    print_instr -> PRINT expression ;
Rule 26    print_instr -> PRINT error ;
Rule 27    labeled_instr -> ID : instruction
Rule 28    assignment -> ID = expression ;
Rule 29    choice_instr -> IF ( condition ) instruction
Rule 30    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 31    choice_instr -> IF ( error ) instruction
Rule 32    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 33    while_instr -> WHILE ( condition ) instruction
Rule 34    while_instr -> WHILE ( error ) instruction
Rule 35    repeat_instr -> REPEAT instructions UNTIL condition ;
Rule 36    return_instr -> RETURN expression ;
Rule 37    continue_instr -> CONTINUE ;
Rule 38    break_instr -> BREAK ;
Rule 39    compound_instr -> { parts }
Rule 40    condition -> expression
Rule 41    const -> INTEGER
Rule 42    const -> FLOAT
Rule 43    const -> STRING
Rule 44    expression -> const
Rule 45    expression -> ID
Rule 46    expression -> expression + expression
Rule 47    expression -> expression - expression
Rule 48    expression -> expression * expression
Rule 49    expression -> expression / expression
Rule 50    expression -> expression % expression
Rule 51    expression -> expression | expression
Rule 52    expression -> expression & expression
Rule 53    expression -> expression ^ expression
Rule 54    expression -> expression AND expression
Rule 55    expression -> expression OR expression
Rule 56    expression -> expression SHL expression
Rule 57    expression -> expression SHR expression
Rule 58    expression -> expression EQ expression
Rule 59    expression -> expression NEQ expression
Rule 60    expression -> expression > expression
Rule 61    expression -> expression < expression
Rule 62    expression -> expression LE expression
Rule 63    expression -> expression GE expression
Rule 64    expression -> ( expression )
Rule 65    expression -> ( error )
Rule 66    expression -> ID ( expr_list_or_empty )
Rule 67    expression -> ID ( error )
Rule 68    expr_list_or_empty -> expr_list
Rule 69    expr_list_or_empty -> <empty>
Rule 70    expr_list -> expr_list , expression
Rule 71    expr_list -> expression
Rule 72    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 73    args_list_or_empty -> args_list
Rule 74    args_list_or_empty -> <empty>
Rule 75    args_list -> args_list , arg
Rule 76    args_list -> arg
Rule 77    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 50
&                    : 52
(                    : 29 30 31 32 33 34 64 65 66 67 72
)                    : 29 30 31 32 33 34 64 65 66 67 72
*                    : 48
+                    : 46
,                    : 9 70 75
-                    : 47
/                    : 49
:                    : 27
;                    : 7 8 24 25 26 28 35 36 37 38
<                    : 61
=                    : 11 28
>                    : 60
AND                  : 54
BREAK                : 38
CONTINUE             : 37
ELSE                 : 30 32
EQ                   : 58
FLOAT                : 42
GE                   : 63
ID                   : 11 27 28 45 66 67 72 77
IF                   : 29 30 31 32
INTEGER              : 41
LE                   : 62
NEQ                  : 59
OR                   : 55
PRINT                : 25 26
REPEAT               : 35
RETURN               : 36
SHL                  : 56
SHR                  : 57
STRING               : 43
TYPE                 : 7 72 77
UNTIL                : 35
WHILE                : 33 34
^                    : 53
error                : 8 26 31 32 34 65 67
{                    : 39
|                    : 51
}                    : 39

Nonterminals, with rules where they appear

arg                  : 75 76
args_list            : 73 75
args_list_or_empty   : 72
assignment           : 16
break_instr          : 21
choice_instr         : 17
compound_instr       : 23 72
condition            : 29 30 33 35
const                : 44
continue_instr       : 22
declaration          : 6
expr_list            : 68 70
expr_list_or_empty   : 66
expression           : 11 24 25 28 36 40 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 70 71
fundef               : 4
init                 : 9 10
inits                : 7 9
instruction          : 5 12 13 27 29 30 30 31 32 32 33 34
instructions         : 12 35
labeled_instr        : 15
part                 : 2 3
parts                : 1 2 39
print_instr          : 14
program              : 0
repeat_instr         : 19
return_instr         : 20
while_instr          : 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . parts
    (2) parts -> . parts part
    (3) parts -> . part
    (4) part -> . fundef
    (5) part -> . instruction
    (6) part -> . declaration
    (72) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (14) instruction -> . print_instr
    (15) instruction -> . labeled_instr
    (16) instruction -> . assignment
    (17) instruction -> . choice_instr
    (18) instruction -> . while_instr
    (19) instruction -> . repeat_instr
    (20) instruction -> . return_instr
    (21) instruction -> . break_instr
    (22) instruction -> . continue_instr
    (23) instruction -> . compound_instr
    (24) instruction -> . expression ;
    (7) declaration -> . TYPE inits ;
    (8) declaration -> . error ;
    (25) print_instr -> . PRINT expression ;
    (26) print_instr -> . PRINT error ;
    (27) labeled_instr -> . ID : instruction
    (28) assignment -> . ID = expression ;
    (29) choice_instr -> . IF ( condition ) instruction
    (30) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (31) choice_instr -> . IF ( error ) instruction
    (32) choice_instr -> . IF ( error ) instruction ELSE instruction
    (33) while_instr -> . WHILE ( condition ) instruction
    (34) while_instr -> . WHILE ( error ) instruction
    (35) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (36) return_instr -> . RETURN expression ;
    (38) break_instr -> . BREAK ;
    (37) continue_instr -> . CONTINUE ;
    (39) compound_instr -> . { parts }
    (44) expression -> . const
    (45) expression -> . ID
    (46) expression -> . expression + expression
    (47) expression -> . expression - expression
    (48) expression -> . expression * expression
    (49) expression -> . expression / expression
    (50) expression -> . expression % expression
    (51) expression -> . expression | expression
    (52) expression -> . expression & expression
    (53) expression -> . expression ^ expression
    (54) expression -> . expression AND expression
    (55) expression -> . expression OR expression
    (56) expression -> . expression SHL expression
    (57) expression -> . expression SHR expression
    (58) expression -> . expression EQ expression
    (59) expression -> . expression NEQ expression
    (60) expression -> . expression > expression
    (61) expression -> . expression < expression
    (62) expression -> . expression LE expression
    (63) expression -> . expression GE expression
    (64) expression -> . ( expression )
    (65) expression -> . ( error )
    (66) expression -> . ID ( expr_list_or_empty )
    (67) expression -> . ID ( error )
    (41) const -> . INTEGER
    (42) const -> . FLOAT
    (43) const -> . STRING

    TYPE            shift and go to state 31
    error           shift and go to state 30
    PRINT           shift and go to state 4
    ID              shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 5
    REPEAT          shift and go to state 14
    RETURN          shift and go to state 2
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 29
    {               shift and go to state 32
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 15

    choice_instr                   shift and go to state 3
    repeat_instr                   shift and go to state 6
    return_instr                   shift and go to state 7
    const                          shift and go to state 8
    continue_instr                 shift and go to state 10
    while_instr                    shift and go to state 11
    program                        shift and go to state 12
    assignment                     shift and go to state 16
    labeled_instr                  shift and go to state 17
    compound_instr                 shift and go to state 18
    part                           shift and go to state 19
    declaration                    shift and go to state 20
    break_instr                    shift and go to state 23
    instruction                    shift and go to state 24
    parts                          shift and go to state 25
    fundef                         shift and go to state 26
    print_instr                    shift and go to state 28
    expression                     shift and go to state 33

state 1

    (42) const -> FLOAT .

    ;               reduce using rule 42 (const -> FLOAT .)
    +               reduce using rule 42 (const -> FLOAT .)
    -               reduce using rule 42 (const -> FLOAT .)
    *               reduce using rule 42 (const -> FLOAT .)
    /               reduce using rule 42 (const -> FLOAT .)
    %               reduce using rule 42 (const -> FLOAT .)
    |               reduce using rule 42 (const -> FLOAT .)
    &               reduce using rule 42 (const -> FLOAT .)
    ^               reduce using rule 42 (const -> FLOAT .)
    AND             reduce using rule 42 (const -> FLOAT .)
    OR              reduce using rule 42 (const -> FLOAT .)
    SHL             reduce using rule 42 (const -> FLOAT .)
    SHR             reduce using rule 42 (const -> FLOAT .)
    EQ              reduce using rule 42 (const -> FLOAT .)
    NEQ             reduce using rule 42 (const -> FLOAT .)
    >               reduce using rule 42 (const -> FLOAT .)
    <               reduce using rule 42 (const -> FLOAT .)
    LE              reduce using rule 42 (const -> FLOAT .)
    GE              reduce using rule 42 (const -> FLOAT .)
    )               reduce using rule 42 (const -> FLOAT .)
    ,               reduce using rule 42 (const -> FLOAT .)


state 2

    (36) return_instr -> RETURN . expression ;
    (44) expression -> . const
    (45) expression -> . ID
    (46) expression -> . expression + expression
    (47) expression -> . expression - expression
    (48) expression -> . expression * expression
    (49) expression -> . expression / expression
    (50) expression -> . expression % expression
    (51) expression -> . expression | expression
    (52) expression -> . expression & expression
    (53) expression -> . expression ^ expression
    (54) expression -> . expression AND expression
    (55) expression -> . expression OR expression
    (56) expression -> . expression SHL expression
    (57) expression -> . expression SHR expression
    (58) expression -> . expression EQ expression
    (59) expression -> . expression NEQ expression
    (60) expression -> . expression > expression
    (61) expression -> . expression < expression
    (62) expression -> . expression LE expression
    (63) expression -> . expression GE expression
    (64) expression -> . ( expression )
    (65) expression -> . ( error )
    (66) expression -> . ID ( expr_list_or_empty )
    (67) expression -> . ID ( error )
    (41) const -> . INTEGER
    (42) const -> . FLOAT
    (43) const -> . STRING

    ID              shift and go to state 34
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 15

    const                          shift and go to state 8
    expression                     shift and go to state 35

state 3

    (17) instruction -> choice_instr .

    UNTIL           reduce using rule 17 (instruction -> choice_instr .)
    PRINT           reduce using rule 17 (instruction -> choice_instr .)
    ID              reduce using rule 17 (instruction -> choice_instr .)
    IF              reduce using rule 17 (instruction -> choice_instr .)
    WHILE           reduce using rule 17 (instruction -> choice_instr .)
    REPEAT          reduce using rule 17 (instruction -> choice_instr .)
    RETURN          reduce using rule 17 (instruction -> choice_instr .)
    BREAK           reduce using rule 17 (instruction -> choice_instr .)
    CONTINUE        reduce using rule 17 (instruction -> choice_instr .)
    {               reduce using rule 17 (instruction -> choice_instr .)
    (               reduce using rule 17 (instruction -> choice_instr .)
    INTEGER         reduce using rule 17 (instruction -> choice_instr .)
    FLOAT           reduce using rule 17 (instruction -> choice_instr .)
    STRING          reduce using rule 17 (instruction -> choice_instr .)
    }               reduce using rule 17 (instruction -> choice_instr .)
    TYPE            reduce using rule 17 (instruction -> choice_instr .)
    error           reduce using rule 17 (instruction -> choice_instr .)
    $end            reduce using rule 17 (instruction -> choice_instr .)
    ELSE            reduce using rule 17 (instruction -> choice_instr .)


state 4

    (25) print_instr -> PRINT . expression ;
    (26) print_instr -> PRINT . error ;
    (44) expression -> . const
    (45) expression -> . ID
    (46) expression -> . expression + expression
    (47) expression -> . expression - expression
    (48) expression -> . expression * expression
    (49) expression -> . expression / expression
    (50) expression -> . expression % expression
    (51) expression -> . expression | expression
    (52) expression -> . expression & expression
    (53) expression -> . expression ^ expression
    (54) expression -> . expression AND expression
    (55) expression -> . expression OR expression
    (56) expression -> . expression SHL expression
    (57) expression -> . expression SHR expression
    (58) expression -> . expression EQ expression
    (59) expression -> . expression NEQ expression
    (60) expression -> . expression > expression
    (61) expression -> . expression < expression
    (62) expression -> . expression LE expression
    (63) expression -> . expression GE expression
    (64) expression -> . ( expression )
    (65) expression -> . ( error )
    (66) expression -> . ID ( expr_list_or_empty )
    (67) expression -> . ID ( error )
    (41) const -> . INTEGER
    (42) const -> . FLOAT
    (43) const -> . STRING

    error           shift and go to state 36
    ID              shift and go to state 34
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 15

    const                          shift and go to state 8
    expression                     shift and go to state 37

state 5

    (33) while_instr -> WHILE . ( condition ) instruction
    (34) while_instr -> WHILE . ( error ) instruction

    (               shift and go to state 38


state 6

    (19) instruction -> repeat_instr .

    UNTIL           reduce using rule 19 (instruction -> repeat_instr .)
    PRINT           reduce using rule 19 (instruction -> repeat_instr .)
    ID              reduce using rule 19 (instruction -> repeat_instr .)
    IF              reduce using rule 19 (instruction -> repeat_instr .)
    WHILE           reduce using rule 19 (instruction -> repeat_instr .)
    REPEAT          reduce using rule 19 (instruction -> repeat_instr .)
    RETURN          reduce using rule 19 (instruction -> repeat_instr .)
    BREAK           reduce using rule 19 (instruction -> repeat_instr .)
    CONTINUE        reduce using rule 19 (instruction -> repeat_instr .)
    {               reduce using rule 19 (instruction -> repeat_instr .)
    (               reduce using rule 19 (instruction -> repeat_instr .)
    INTEGER         reduce using rule 19 (instruction -> repeat_instr .)
    FLOAT           reduce using rule 19 (instruction -> repeat_instr .)
    STRING          reduce using rule 19 (instruction -> repeat_instr .)
    }               reduce using rule 19 (instruction -> repeat_instr .)
    TYPE            reduce using rule 19 (instruction -> repeat_instr .)
    error           reduce using rule 19 (instruction -> repeat_instr .)
    $end            reduce using rule 19 (instruction -> repeat_instr .)
    ELSE            reduce using rule 19 (instruction -> repeat_instr .)


state 7

    (20) instruction -> return_instr .

    UNTIL           reduce using rule 20 (instruction -> return_instr .)
    PRINT           reduce using rule 20 (instruction -> return_instr .)
    ID              reduce using rule 20 (instruction -> return_instr .)
    IF              reduce using rule 20 (instruction -> return_instr .)
    WHILE           reduce using rule 20 (instruction -> return_instr .)
    REPEAT          reduce using rule 20 (instruction -> return_instr .)
    RETURN          reduce using rule 20 (instruction -> return_instr .)
    BREAK           reduce using rule 20 (instruction -> return_instr .)
    CONTINUE        reduce using rule 20 (instruction -> return_instr .)
    {               reduce using rule 20 (instruction -> return_instr .)
    (               reduce using rule 20 (instruction -> return_instr .)
    INTEGER         reduce using rule 20 (instruction -> return_instr .)
    FLOAT           reduce using rule 20 (instruction -> return_instr .)
    STRING          reduce using rule 20 (instruction -> return_instr .)
    }               reduce using rule 20 (instruction -> return_instr .)
    TYPE            reduce using rule 20 (instruction -> return_instr .)
    error           reduce using rule 20 (instruction -> return_instr .)
    $end            reduce using rule 20 (instruction -> return_instr .)
    ELSE            reduce using rule 20 (instruction -> return_instr .)


state 8

    (44) expression -> const .

    +               reduce using rule 44 (expression -> const .)
    -               reduce using rule 44 (expression -> const .)
    *               reduce using rule 44 (expression -> const .)
    /               reduce using rule 44 (expression -> const .)
    %               reduce using rule 44 (expression -> const .)
    |               reduce using rule 44 (expression -> const .)
    &               reduce using rule 44 (expression -> const .)
    ^               reduce using rule 44 (expression -> const .)
    AND             reduce using rule 44 (expression -> const .)
    OR              reduce using rule 44 (expression -> const .)
    SHL             reduce using rule 44 (expression -> const .)
    SHR             reduce using rule 44 (expression -> const .)
    EQ              reduce using rule 44 (expression -> const .)
    NEQ             reduce using rule 44 (expression -> const .)
    >               reduce using rule 44 (expression -> const .)
    <               reduce using rule 44 (expression -> const .)
    LE              reduce using rule 44 (expression -> const .)
    GE              reduce using rule 44 (expression -> const .)
    ;               reduce using rule 44 (expression -> const .)
    )               reduce using rule 44 (expression -> const .)
    ,               reduce using rule 44 (expression -> const .)


state 9

    (64) expression -> ( . expression )
    (65) expression -> ( . error )
    (44) expression -> . const
    (45) expression -> . ID
    (46) expression -> . expression + expression
    (47) expression -> . expression - expression
    (48) expression -> . expression * expression
    (49) expression -> . expression / expression
    (50) expression -> . expression % expression
    (51) expression -> . expression | expression
    (52) expression -> . expression & expression
    (53) expression -> . expression ^ expression
    (54) expression -> . expression AND expression
    (55) expression -> . expression OR expression
    (56) expression -> . expression SHL expression
    (57) expression -> . expression SHR expression
    (58) expression -> . expression EQ expression
    (59) expression -> . expression NEQ expression
    (60) expression -> . expression > expression
    (61) expression -> . expression < expression
    (62) expression -> . expression LE expression
    (63) expression -> . expression GE expression
    (64) expression -> . ( expression )
    (65) expression -> . ( error )
    (66) expression -> . ID ( expr_list_or_empty )
    (67) expression -> . ID ( error )
    (41) const -> . INTEGER
    (42) const -> . FLOAT
    (43) const -> . STRING

    error           shift and go to state 39
    ID              shift and go to state 34
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 15

    const                          shift and go to state 8
    expression                     shift and go to state 40

state 10

    (22) instruction -> continue_instr .

    UNTIL           reduce using rule 22 (instruction -> continue_instr .)
    PRINT           reduce using rule 22 (instruction -> continue_instr .)
    ID              reduce using rule 22 (instruction -> continue_instr .)
    IF              reduce using rule 22 (instruction -> continue_instr .)
    WHILE           reduce using rule 22 (instruction -> continue_instr .)
    REPEAT          reduce using rule 22 (instruction -> continue_instr .)
    RETURN          reduce using rule 22 (instruction -> continue_instr .)
    BREAK           reduce using rule 22 (instruction -> continue_instr .)
    CONTINUE        reduce using rule 22 (instruction -> continue_instr .)
    {               reduce using rule 22 (instruction -> continue_instr .)
    (               reduce using rule 22 (instruction -> continue_instr .)
    INTEGER         reduce using rule 22 (instruction -> continue_instr .)
    FLOAT           reduce using rule 22 (instruction -> continue_instr .)
    STRING          reduce using rule 22 (instruction -> continue_instr .)
    }               reduce using rule 22 (instruction -> continue_instr .)
    TYPE            reduce using rule 22 (instruction -> continue_instr .)
    error           reduce using rule 22 (instruction -> continue_instr .)
    $end            reduce using rule 22 (instruction -> continue_instr .)
    ELSE            reduce using rule 22 (instruction -> continue_instr .)


state 11

    (18) instruction -> while_instr .

    UNTIL           reduce using rule 18 (instruction -> while_instr .)
    PRINT           reduce using rule 18 (instruction -> while_instr .)
    ID              reduce using rule 18 (instruction -> while_instr .)
    IF              reduce using rule 18 (instruction -> while_instr .)
    WHILE           reduce using rule 18 (instruction -> while_instr .)
    REPEAT          reduce using rule 18 (instruction -> while_instr .)
    RETURN          reduce using rule 18 (instruction -> while_instr .)
    BREAK           reduce using rule 18 (instruction -> while_instr .)
    CONTINUE        reduce using rule 18 (instruction -> while_instr .)
    {               reduce using rule 18 (instruction -> while_instr .)
    (               reduce using rule 18 (instruction -> while_instr .)
    INTEGER         reduce using rule 18 (instruction -> while_instr .)
    FLOAT           reduce using rule 18 (instruction -> while_instr .)
    STRING          reduce using rule 18 (instruction -> while_instr .)
    }               reduce using rule 18 (instruction -> while_instr .)
    TYPE            reduce using rule 18 (instruction -> while_instr .)
    error           reduce using rule 18 (instruction -> while_instr .)
    $end            reduce using rule 18 (instruction -> while_instr .)
    ELSE            reduce using rule 18 (instruction -> while_instr .)


state 12

    (0) S' -> program .



state 13

    (41) const -> INTEGER .

    ;               reduce using rule 41 (const -> INTEGER .)
    +               reduce using rule 41 (const -> INTEGER .)
    -               reduce using rule 41 (const -> INTEGER .)
    *               reduce using rule 41 (const -> INTEGER .)
    /               reduce using rule 41 (const -> INTEGER .)
    %               reduce using rule 41 (const -> INTEGER .)
    |               reduce using rule 41 (const -> INTEGER .)
    &               reduce using rule 41 (const -> INTEGER .)
    ^               reduce using rule 41 (const -> INTEGER .)
    AND             reduce using rule 41 (const -> INTEGER .)
    OR              reduce using rule 41 (const -> INTEGER .)
    SHL             reduce using rule 41 (const -> INTEGER .)
    SHR             reduce using rule 41 (const -> INTEGER .)
    EQ              reduce using rule 41 (const -> INTEGER .)
    NEQ             reduce using rule 41 (const -> INTEGER .)
    >               reduce using rule 41 (const -> INTEGER .)
    <               reduce using rule 41 (const -> INTEGER .)
    LE              reduce using rule 41 (const -> INTEGER .)
    GE              reduce using rule 41 (const -> INTEGER .)
    )               reduce using rule 41 (const -> INTEGER .)
    ,               reduce using rule 41 (const -> INTEGER .)


state 14

    (35) repeat_instr -> REPEAT . instructions UNTIL condition ;
    (12) instructions -> . instructions instruction
    (13) instructions -> . instruction
    (14) instruction -> . print_instr
    (15) instruction -> . labeled_instr
    (16) instruction -> . assignment
    (17) instruction -> . choice_instr
    (18) instruction -> . while_instr
    (19) instruction -> . repeat_instr
    (20) instruction -> . return_instr
    (21) instruction -> . break_instr
    (22) instruction -> . continue_instr
    (23) instruction -> . compound_instr
    (24) instruction -> . expression ;
    (25) print_instr -> . PRINT expression ;
    (26) print_instr -> . PRINT error ;
    (27) labeled_instr -> . ID : instruction
    (28) assignment -> . ID = expression ;
    (29) choice_instr -> . IF ( condition ) instruction
    (30) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (31) choice_instr -> . IF ( error ) instruction
    (32) choice_instr -> . IF ( error ) instruction ELSE instruction
    (33) while_instr -> . WHILE ( condition ) instruction
    (34) while_instr -> . WHILE ( error ) instruction
    (35) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (36) return_instr -> . RETURN expression ;
    (38) break_instr -> . BREAK ;
    (37) continue_instr -> . CONTINUE ;
    (39) compound_instr -> . { parts }
    (44) expression -> . const
    (45) expression -> . ID
    (46) expression -> . expression + expression
    (47) expression -> . expression - expression
    (48) expression -> . expression * expression
    (49) expression -> . expression / expression
    (50) expression -> . expression % expression
    (51) expression -> . expression | expression
    (52) expression -> . expression & expression
    (53) expression -> . expression ^ expression
    (54) expression -> . expression AND expression
    (55) expression -> . expression OR expression
    (56) expression -> . expression SHL expression
    (57) expression -> . expression SHR expression
    (58) expression -> . expression EQ expression
    (59) expression -> . expression NEQ expression
    (60) expression -> . expression > expression
    (61) expression -> . expression < expression
    (62) expression -> . expression LE expression
    (63) expression -> . expression GE expression
    (64) expression -> . ( expression )
    (65) expression -> . ( error )
    (66) expression -> . ID ( expr_list_or_empty )
    (67) expression -> . ID ( error )
    (41) const -> . INTEGER
    (42) const -> . FLOAT
    (43) const -> . STRING
